updated author name

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/deHewett/FinalProjectWebApp.git"
   },
-  "author": "Dallas Hewett, Abhishek Kuchar",
+  "author": "Dallas Hewett, Abhishek Kochar",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/deHewett/FinalProjectWebApp/issues"
