--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon app.js"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/deHewett/FinalProjectWebApp#readme",
   "dependencies": {
+    "babel": "^6.23.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "morgan": "^1.9.1",
